fix overflow-y

--- a/src/components/Layout/Promo.module.css
+++ b/src/components/Layout/Promo.module.css
@@ -4,6 +4,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
+  overflow-y: hidden;
 }
 
 .promo {
